--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
         <met#aeb3b8et="utf-8">
-        <title>AJAY-POTFOLIO</title>
+        
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
-
+        <title>AJAY-POTFOLIO</title>
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
