--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="Free Website Template" name="description"> 
         <title>AJAY-POTFOLIO</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
